# CDD203_A1

./: .gitignore  main.py  pyproject.toml
data/: negtest.fa  negtest.fq  negtest2.fq
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
